<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@android:color/white"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/txtPin"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/primaryText" />
    </LinearLayout>
</RelativeLayout>