<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/infoHud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/appBackground"
        android:padding="8dp">
        <!-- ROW 1 -->
        <TextView
            android:id="@+id/TotalIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/account_ref"
            android:textColor="@color/labelColor" />

        <TextView
            android:id="@+id/txtTotalIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TotalIncome"
            android:layout_alignParentRight="true"
            android:text="@string/account_ref"
            android:textColor="@color/primaryText" />

        <TextView
            android:id="@+id/TotalExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TotalIncome"
            android:layout_marginTop="5dp"
            android:text="@string/mpesa_ref"
            android:textColor="@color/labelColor" />

        <TextView
            android:id="@+id/txtTotalExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TotalExpenses"
            android:layout_alignParentRight="true"
            android:text="@string/service_cost"
            android:textColor="@color/primaryText" />

        <TextView
            android:id="@+id/Difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TotalExpenses"
            android:layout_marginTop="5dp"
            android:text="@string/mpesa_ref"
            android:textColor="@color/labelColor" />

        <TextView
            android:id="@+id/txtDifference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtDifference"
            android:layout_alignParentRight="true"
            android:text="@string/service_cost"
            android:textColor="@color/primaryText" />

    </RelativeLayout>
</RelativeLayout>
